# llmself

./: PUBLISHING.md  README.md  example_usage.py  pyproject.toml
llmself/: __init__.py  code.py  context.py  creative.py  io.py  knowledge.py  role.py  sandbox.py  tools.py  unsafe.py
llmself/language/: __init__.py  style.py
scripts/: publish.py
src/llmself/: __init__.py  ability.py  basic_ability.py  language.py  main.py  role.py
