[project]
name = "llmself"
version = "0.1.0"
description = "A tool for writing code-prompt in llmself"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DJJ", email = "shuaiqijianhoa@qq.com"},
    {name = "Danniel", email = ""}
]
keywords = ["llm", "code", "prompt", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Disdjj/llmself"
Repository = "https://github.com/Disdjj/llmself"
Issues = "https://github.com/Disdjj/llmself/issues"

[project.scripts]
llmself = "llmself.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmself"]
